UserController documentation
